[tool.poetry]
name = "utz-dash"
version = "0.1.0"
description = ""
authors = ["Veneraldo Queiroz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
streamlit = "^1.27.2"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
